# SeqDB

./: .gitignore  CNAME  LICENSE  README.md  docker-compose.yml  mkdocs.yml  test.db
.github/workflows/: docs.yml
backend/: Dockerfile  dev.db  pyproject.toml  test.db
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/tests/: conftest.py  test_accession.py  test_archive_submissions.py  test_auth.py  test_bulk_submit.py  test_bulk_submit_integration.py  test_domain_mapper.py  test_ena_xml.py  test_eutils_api.py  test_eutils_parser.py  test_experiments_api.py  test_ftp_watcher.py  test_health.py  test_integration.py  test_lims.py  test_minio_upload.py  test_models.py  test_ncbi_api.py  test_ncbi_client.py  test_ncbi_xml_builder.py  test_ontology_api.py  test_ontology_resolver.py  test_projects_api.py  test_runs_api.py  test_samples_api.py  test_samplesheet.py  test_schemas.py  test_search_api.py  test_staging.py  test_storage.py  test_templates.py  (+4 more)
cli/: pyproject.toml
cli/src/seqdb_cli/: __init__.py  client.py  config.py  main.py  transfer.py  utils.py
cli/src/seqdb_cli/commands/: auth.py  fetch.py  ingest.py  status.py  submit.py
cli/src/seqdb_cli/formats/: __init__.py  generic.py  rnaseq.py  sarek.py
cli/tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_fetch.py  test_formats.py  test_ingest.py  test_submit.py  test_transfer.py  test_utils.py
docs/: API_GUIDE.md  CLOUD_DEPLOYMENT.md  index.md  requirements.txt
frontend/: Dockerfile  package.json
site/: 404.html  index.html  objects.inv  sitemap.xml
(+194 files in other folders)
