[project]
name = "seqdb-cli"
version = "0.1.0"
description = "CLI for SeqDB genomic data platform"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
]

[project.scripts]
seqdb = "seqdb_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seqdb_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
